--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -23,7 +23,6 @@ change-image=تغيير الصورة
 change-language=تغيير اللغة
 change-viewport=تغيير نقطة العرض
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=التغييرات التي تجري على هذه الصفحة الرئيسية سيتم نشرها على جميع قوالب الصفحات وقوالب صفحات العرض والصفحات التي تستخدم الصفحة الرئيسية. هل أنت متأكد من أنك تريد المتابعة؟
-changes-saved=التغييرات المحفوظة
 changes-to-experiences-are-applied-immediately=يتم تطبيق التغييرات على التجارب فوريًا.
 circle=دائرة
 collection=مجموعة
@@ -140,7 +139,7 @@ save-mapping-configuration=حفظ تكوين التعيين
 save-variant=حفظ المتغير
 saved=محفوظ
 saved-fragments=أجزاء محفوظة
-saving-changes=جار حفظ التغييرات...
+saving=Saving (Automatic Copy)
 search-form=نموذج البحث
 section=القسم
 section-builder=وحدة بناء الأقسام
