--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
@@ -23,7 +23,6 @@ change-image=Bild ändern
 change-language=Sprache ändern
 change-viewport=Viewport ändern
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=An diesem Master vorgenommene Änderungen werden auf alle Seitenvorlagen, Vorlagen für die Anzeigeseite und Seiten übertragen, die diesen verwenden. Sind Sie sicher, dass Sie fortfahren möchten?
-changes-saved=Änderungen gespeichert
 changes-to-experiences-are-applied-immediately=Änderungen an den Erfahrungswerten werden sofort umgesetzt.
 circle=Kreis
 collection=Samlungen
@@ -140,7 +139,7 @@ save-mapping-configuration=Zuordnungskonfiguration speichern
 save-variant=Variante speichern
 saved=Gespeichert
 saved-fragments=Gespeicherte Fragmente
-saving-changes=Änderungen werden gespeichert...
+saving=Saving (Automatic Copy)
 search-form=Suchformular
 section=Abschnitt
 section-builder=Sektions-Builder
