--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
@@ -23,7 +23,6 @@ change-image=Vaihda Kuva
 change-language=Vaihda Kieli
 change-viewport=Vaihda Kuvaporttia
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Pääsivuun tehdyt muutokset levitetään kaikille sivumalleille, näyttösivumalleille ja sivuille, jotka käyttävät sitä. Haluatko varmasti jatkaa?
-changes-saved=Muutokset Tallennettu
 changes-to-experiences-are-applied-immediately=Muutokset kokemuksiin tulevat voimaan välittömästi.
 circle=Ympyrä
 collection=Kokoelma
@@ -140,7 +139,7 @@ save-mapping-configuration=Tallenna Yhdistämisen Asetukset
 save-variant=Tallenna Variantit
 saved=Tallennettu
 saved-fragments=Tallennetut Sivunosat
-saving-changes=Tallennetaan muutokset...
+saving=Saving (Automatic Copy)
 search-form=Hakulomake
 section=Osa
 section-builder=Osion Kokoaja
