--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -23,7 +23,6 @@ change-image=Kép megváltoztatása
 change-language=Nyelv megváltoztatása
 change-viewport=Nézőpont megváltoztatása
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=A mesteren végzett változtatások az összes azt használó oldalsablonra, megjelenítési oldalsablonra és oldalra kiterjednek. Biztosan végre kívánja hajtani?
-changes-saved=Változtatások elmentve
 changes-to-experiences-are-applied-immediately=Az élmény változásai azonnal érvényesülnek.
 circle=Kör
 collection=Gyűjtemény
@@ -140,7 +139,7 @@ save-mapping-configuration=Leképezés konfigurációjának mentése
 save-variant=Változat mentése
 saved=Mentve
 saved-fragments=Elmentett töredékek
-saving-changes=Módosítások mentése...
+saving=Saving (Automatic Copy)
 search-form=Kereső űrlap
 section=Szakasz
 section-builder=Szakaszépítő
