--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -23,7 +23,6 @@ change-image=Endre bilde
 change-language=Change Language
 change-viewport=Change Viewport
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Endringer som gjøres i denne hovedmalen vil bli propagert til alle sidemaler, visningsidemaler, og sider som bruker den. Er du sikker på at du ønsker å fortsette?
-changes-saved=Changes Saved
 changes-to-experiences-are-applied-immediately=Endringer i opplevelser er umiddelbart tilgjengelig.
 circle=Circle
 collection=Samling
@@ -140,7 +139,7 @@ save-mapping-configuration=Lagre koblingskonfigurasjon
 save-variant=Lagre variant
 saved=Lagret
 saved-fragments=Lagrede fragmenter
-saving-changes=Lagrer endringer...
+saving=Saving (Automatic Copy)
 search-form=Søkeskjema
 section=Seksjon
 section-builder=Section Builder
