--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -23,7 +23,6 @@ change-image=Modificar Imagem
 change-language=Alterar idioma
 change-viewport=Alterar ponto de vista
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Modificações feitas neste mestre serão propagadas para todos os modelos de página, modelos de página de exibição e páginas que o utilizarem. Tem certeza que deseja avançar?
-changes-saved=Modificações salvas
 changes-to-experiences-are-applied-immediately=Modificações nas experiências são aplicadas imediatamente.
 circle=Círculo
 collection=Coleção
@@ -140,7 +139,7 @@ save-mapping-configuration=Salvar Configuração de Mapeamento
 save-variant=Salvar Variante
 saved=Salvo
 saved-fragments=Fragmentos Salvos
-saving-changes=Salvando alterações...
+saving=Saving (Automatic Copy)
 search-form=Buscar de
 section=Seção
 section-builder=Construtor de Seção
