--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
@@ -23,7 +23,6 @@ change-image=Ändra bild
 change-language=Ändra språk
 change-viewport=Ändra visningsområde
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Ändringar som görs i det här originalet kommer att uppdatera alla sidmallar och sidor som använder det. Vill du verkligen fortsätta?
-changes-saved=Ändringarna har sparats
 changes-to-experiences-are-applied-immediately=Ändringar i upplevelser tillämpas direkt.
 circle=Cirkel
 collection=Samling
@@ -140,7 +139,7 @@ save-mapping-configuration=Spara konfiguration av mappning
 save-variant=Spara variant
 saved=Sparat
 saved-fragments=Sparade fragment
-saving-changes=Sparar ändringar...
+saving=Saving (Automatic Copy)
 search-form=Sökformulär
 section=Avsnitt
 section-builder=Avsnittsverktyg
