--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -23,7 +23,6 @@ change-image=更改图像
 change-language=更改语言
 change-viewport=更改视区
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=对此母版进行的变更将传播到使用它的所有页面模板、显示页模板和页面。确定要继续吗？
-changes-saved=已保存变更
 changes-to-experiences-are-applied-immediately=将立即应用对体验的变更。
 circle=圆
 collection=集合
@@ -140,7 +139,7 @@ save-mapping-configuration=保存映射配置
 save-variant=保存变体
 saved=已保存
 saved-fragments=已保存的片段
-saving-changes=正在保存更改…
+saving=Saving (Automatic Copy)
 search-form=搜索表单
 section=部分
 section-builder=部分生成器
