--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -23,7 +23,6 @@ change-image=Canvia la imatge
 change-language=Canvia l'idioma
 change-viewport=Canvia la finestra gràfica
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Els canvis que es facin en aquesta plantilla mestra es propagaran a totes les plantilles de pàgina, a les plantilles de pàgina de visualització i a les pàgines que la utilitzin. Confirmeu que voleu continuar?
-changes-saved=S'han desat els canvis
 changes-to-experiences-are-applied-immediately=Els canvis fets a les experiències s'apliquen immediatament.
 circle=Cercle
 collection=Col·lecció
@@ -140,7 +139,7 @@ save-mapping-configuration=Desa la configuració del mapatge
 save-variant=Desa la variant
 saved=Modificat
 saved-fragments=Fragments desats
-saving-changes=S'estan desant els canvis...
+saving=Saving (Automatic Copy)
 search-form=Formulari de cerca
 section=Secció
 section-builder=Generador de seccions
