--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_en_GB.properties
@@ -23,7 +23,6 @@ change-image=Change Image
 change-language=Change Language (Automatic Copy)
 change-viewport=Change Viewport (Automatic Copy)
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Changes made to this master are going to be propagated to all page templates, display page templates, and pages using it. Are you sure you want to proceed?
-changes-saved=Changes Saved (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately.
 circle=Circle (Automatic Copy)
 collection=Collection (Automatic Copy)
@@ -140,7 +139,7 @@ save-mapping-configuration=Save Mapping Configuration (Automatic Copy)
 save-variant=Save Variant
 saved=Saved
 saved-fragments=Saved Fragments (Automatic Copy)
-saving-changes=Saving changes...
+saving=Saving (Automatic Copy)
 search-form=Search Form
 section=Section
 section-builder=Section Builder
