--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -23,7 +23,6 @@ change-image=Cambiar imagen
 change-language=Cambiar idioma
 change-viewport=Cambiar área de visualización
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Los cambios realizados en esta página maestra se propagarán a todas las plantillas de página y plantillas de página de visualización, así como a todas las páginas que la usen. ¿Está seguro de que quiere continuar?
-changes-saved=Cambios guardados
 changes-to-experiences-are-applied-immediately=Los cambios realizados en las experiencias se aplican de inmediato.
 circle=Círculo
 collection=Colección
@@ -140,7 +139,7 @@ save-mapping-configuration=Guardar configuración de asignación
 save-variant=Guardar variante
 saved=Guardado
 saved-fragments=Fragmentos guardados
-saving-changes=Guardando cambios…
+saving=Saving (Automatic Copy)
 search-form=Formulario de búsqueda
 section=Sección
 section-builder=Generador de sección
