--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -23,7 +23,6 @@ change-image=Change Image
 change-language=Change Language
 change-viewport=Change Viewport
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Changes made to this master are going to be propagated to all page templates, display page templates, and pages using it. Are you sure you want to proceed?
-changes-saved=Changes Saved
 changes-to-experiences-are-applied-immediately=تغییرات در آزمایش بلافاصله اعمال می شود.
 circle=Circle
 collection=Collection
@@ -140,7 +139,7 @@ save-mapping-configuration=Save Mapping Configuration
 save-variant=Save Variant
 saved=ذخیره شده
 saved-fragments=Saved Fragments
-saving-changes=ذخیره تغییرات...
+saving=Saving (Automatic Copy)
 search-form=Search Form
 section=بخش
 section-builder=سازنده بخش
