--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -23,7 +23,6 @@ change-image=Changer l'image
 change-language=Changer la langue
 change-viewport=Changer de fenêtre d'affichage
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Les modifications apportées à ce maître vont être propagées à tous les modèles de page, aux modèles de page d'affichage et aux pages qui l'utilisent. Voulez-vous vraiment continuer ?
-changes-saved=Modifications enregistrées
 changes-to-experiences-are-applied-immediately=Les modifications apportées aux expériences sont appliquées immédiatement.
 circle=Cercle
 collection=Collection
@@ -140,7 +139,7 @@ save-mapping-configuration=Enregistrer la configuration de mapping
 save-variant=Enregistrer la variante
 saved=Sauvegarder
 saved-fragments=Fragments enregistrés
-saving-changes=Enregistrement des modifications...
+saving=Saving (Automatic Copy)
 search-form=Formulaire de recherche
 section=Section
 section-builder=Constructeur de section
