--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
@@ -23,7 +23,6 @@ change-image=画像を変更
 change-language=言語を変更
 change-viewport=ビューポートを変更
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=このマスターに対する変更は、すべてのページテンプレート、表示ページテンプレート、およびそれらを使用しているページに反映されます。続行しますか？
-changes-saved=変更を保存しました。
 changes-to-experiences-are-applied-immediately=エクスペリエンスへの変更は即座に適用されます。
 circle=円
 collection=コレクション
@@ -140,7 +139,7 @@ save-mapping-configuration=マッピング構成を保存
 save-variant=バリエーションを保存
 saved=保存済み
 saved-fragments=保存されたフラグメント
-saving-changes=変更を保存しています...
+saving=Saving (Automatic Copy)
 search-form=検索フォーム
 section=セクション
 section-builder=セクションビルダー
