--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
@@ -23,7 +23,6 @@ change-image=Change Image
 change-language=Change Language
 change-viewport=Change Viewport
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Changes made to this master are going to be propagated to all page templates, display page templates, and pages using it. Are you sure you want to proceed?
-changes-saved=Changes Saved
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately.
 circle=Circle
 collection=Collection
@@ -140,7 +139,7 @@ save-mapping-configuration=매핑 구성 저장
 save-variant=Save Variant
 saved=Saved
 saved-fragments=저장된 조각
-saving-changes=Saving changes...
+saving=Saving (Automatic Copy)
 search-form=Search Form
 section=Section
 section-builder=섹션 빌더
