--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -23,7 +23,6 @@ change-image=Afbeelding wijzigen
 change-language=Taal wijzigen
 change-viewport=Weergaveveld wijzigen
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Wijzigingen aan deze bovenliggende pagina worden gepropageerd naar alle paginasjablonen, weergavepaginasjablonen en de pagina's die er gebruik van maken. Weet u zeker dat u wilt doorgaan?
-changes-saved=Wijzigingen opgeslagen
 changes-to-experiences-are-applied-immediately=Wijzigingen aan ervaringen worden onmiddellijk toegepast.
 circle=Cirkel
 collection=Collectie
@@ -140,7 +139,7 @@ save-mapping-configuration=Toewijzingsconfiguratie opslaan
 save-variant=Variant opslaan
 saved=Opgeslagen
 saved-fragments=Opgeslagen fragmenten
-saving-changes=Wijzigingen opslaan ...
+saving=Saving (Automatic Copy)
 search-form=Zoekformulier
 section=Sectie
 section-builder=Sectiebouwer
