--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
@@ -23,7 +23,6 @@ change-image=Change Image
 change-language=Change Language
 change-viewport=Change Viewport
 changes-made-on-this-master-are-going-to-be-propagated-to-all-page-templates,-display-page-templates,-and-pages-using-it.are-you-sure-you-want-to-proceed=Changes made to this master are going to be propagated to all page templates, display page templates, and pages using it. Are you sure you want to proceed?
-changes-saved=Changes Saved
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately.
 circle=Circle
 collection=Collection
@@ -140,7 +139,7 @@ save-mapping-configuration=Save Mapping Configuration
 save-variant=Save Variant
 saved=சேமிக்கப்பட்டது
 saved-fragments=Saved Fragments
-saving-changes=மாற்றங்கள் சேமிக்கப்படுகிறது...
+saving=Saving (Automatic Copy)
 search-form=Search Form
 section=செக்ஷன்
 section-builder=செக்ஷன்களை உருவாக்குதல்
