--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_iw.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=הזן מפתח מאפיין ייחודי.
 please-enter-a-valid-property-key=הזן מפתח מאפיין חוקי.
 please-enter-a-valid-property-value=הזן ערך מאפיין חוקי.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=מאפיינים הם אמצעי להוספת מידע מפורט יותר עבור קטגוריה מסוימת. הם מחולקים לזוגות ערכי מפתח המאפשרים לך לשייך מידע מפורט עם קטגוריה.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=שמור והוסף אחד חדש (Automatic Translation)
 select-category=בחר קטגוריה
 the-asset-subtype-no-longer-exists=סוג המשנה של הנכס לא קיים יותר.
 the-category-x-and-parent-category-should-not-be-the-same=הקטגוריה {0} וקטגוריית האב לא אמורות להיות זהות.
 the-vocabulary-could-not-be-found=אוצר המילים לא נמצא.
 there-are-no-vocabularies=אין אוצרות מילים.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=אוצר צריכים ליצור קטגוריות. (Automatic Translation)
