--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_th.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=กรุณาใส่รหัสคุณ
 please-enter-a-valid-property-key=กรุณาใส่รหัสคุณสมบัติที่ถูกต้อง
 please-enter-a-valid-property-value=กรุณาใส่ค่าคุณสมบัติที่ถูกต้อง
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=คุณสมบัติเป็นวิธีการเพิ่มข้อมูลรายละเอียดเพิ่มเติมไปยังประเภทเฉพาะ จะถูกแยกออกเป็นคู่ค่าคีย์ที่ช่วยให้คุณสามารถเชื่อมโยงข้อมูลรายละเอียดกับหมวดหมู่
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=บันทึกและเพิ่มรายการใหม่ (Automatic Translation)
 select-category=เลือกหมวดหมู่
 the-asset-subtype-no-longer-exists=ไม่มีประเภทย่อยของเนื้อหาอีกต่อไป
 the-category-x-and-parent-category-should-not-be-the-same=หมวดหมู่ {0} และหมวดหมู่หลักไม่ควรเหมือนกัน
 the-vocabulary-could-not-be-found=ไม่พบคำศัพท์
 there-are-no-vocabularies=ไม่มีคำศัพท์
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=คําศัพท์จําเป็นในการสร้างหมวดหมู่ (Automatic Translation)
