--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ca.properties
@@ -18,7 +18,7 @@ please-enter-a-unique-property-key=Per favor, introdueixi una clau de propietat 
 please-enter-a-valid-property-key=Per favor, introdueixi una clau de propietat vàlida.
 please-enter-a-valid-property-value=Per favor, introdueixi un valor de propietat vàlid.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Les propietats són una manera d'afegir informació més detallada a una categoria específica. Estan separades per parelles clau-valor que ens permeten associar informació detallada amb una categoria.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Desa-la i afegeix-ne una de nova (Automatic Translation)
 select-category=Selecciona una categoria
 the-asset-subtype-no-longer-exists=El subtipus de contingut ja no existeix.
 the-category-x-and-parent-category-should-not-be-the-same=La categoria {0} i la seva categoria pare no han de ser la mateixa.
