--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_cs.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Please enter a unique property key.
 please-enter-a-valid-property-key=Please enter a valid property key.
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Vlastnosti slouží k přidávání detailních informací specifické kategorii. Vždy sestávají z klíče a hodnoty, což umožňuje ke kategoriím přiřazovat detailnější informace.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Uložit a přidat nový (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same.
 the-vocabulary-could-not-be-found=Kategorie nebyla nalezena.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Slovníky jsou potřebné k vytvoření kategorií. (Automatic Translation)
