--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_el.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Please enter a unique property key.
 please-enter-a-valid-property-key=Please enter a valid property key.
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Οι ιδιότητες είναι ένας τρόπος να προστεθούν πιο αναλυτικές πληροφορίες σε μια συγκεκριμένη κατηγορία. Είναι χωρισμένες σε ζεύγη κλειδιού-τιμής που επιτρέπουν τη σύνδεση αναλυτικής πληροφορίας με μια κατηγορία.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Αποθήκευση και προσθήκη νέου (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same.
 the-vocabulary-could-not-be-found=Η κατηγορία δεν μπόρεσε να βρεθεί.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Τα λεξιλόγια είναι απαραίτητα για τη δημιουργία κατηγοριών. (Automatic Translation)
