--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_es.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Por favor, introduzca una clave de propiedad 
 please-enter-a-valid-property-key=Por favor, introduzca una clave de propiedad válida.
 please-enter-a-valid-property-value=Por favor, introduzca un valor de propiedad válido.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Las propiedades son una manera de agregar información más detallada a una categoría. Consisten en una clave y un valor que nos permiten asociar información detallada a la categoría.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Guardar y agregar uno nuevo (Automatic Translation)
 select-category=Seleccionar categoría
 the-asset-subtype-no-longer-exists=El subtipo del activo ya no existe.
 the-category-x-and-parent-category-should-not-be-the-same=La categoría {0} y categoría matriz no deben ser la misma.
 the-vocabulary-could-not-be-found=La categoría no ha sido encontrada.
 there-are-no-vocabularies=No hay vocabularios.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Se necesitan vocabularios para crear categorías. (Automatic Translation)
