--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_fa.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=لطفا یک کلید یکتا کلیک نم
 please-enter-a-valid-property-key=لطفا یک کلید خاص معتبر وارد نمایید.
 please-enter-a-valid-property-value=لطفا یک مقدار خاص معتبر وارد نمایید.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=خصوصیات راهی برای افزودن اطلاعات بیشتر به یک گروه خاص است.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=ذخیره و اضافه کردن یک جدید (Automatic Translation)
 select-category=انتخاب طبقه بندی
 the-asset-subtype-no-longer-exists=زیرنوع این موجودی دیگر وجود ندارد.
 the-category-x-and-parent-category-should-not-be-the-same=طبقه بندی {0} و طبقه بندی والد نباید یکسان باشند.
 the-vocabulary-could-not-be-found=واژه يافت نشد.
 there-are-no-vocabularies=لغتی وجود ندارد.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=واژگان برای ایجاد دسته ها لازم است. (Automatic Translation)
