--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_in.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Please enter a unique property key.
 please-enter-a-valid-property-key=Please enter a valid property key.
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Properti adalah cara untuk menambahkan informasi lebih rinci untuk kategori tertentu. Mereka dipisahkan menjadi pasangan nilai kunci yang memungkinkan Anda untuk menghubungkan informasi rinci dengan kategori.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Simpan dan tambahkan yang baru (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same.
 the-vocabulary-could-not-be-found=Kategori ini tidak dapat ditemukan.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Kosakata diperlukan untuk membuat kategori. (Automatic Translation)
