--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_it.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Inserire una chiave di proprietà univoca.
 please-enter-a-valid-property-key=Inserisci una chiave di proprietà valida.
 please-enter-a-valid-property-value=Inserisci un valore di proprietà valido.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Le proprietà sono un modo di aggiungere informazioni dettagliate a una categoria specifica. Sono separate in coppie di chiavi e valori che ti consentono di associare informazioni dettagliate a una categoria.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Salvare e aggiungere uno nuovo (Automatic Translation)
 select-category=Seleziona categoria
 the-asset-subtype-no-longer-exists=Il sottotipo di risorsa non esiste più.
 the-category-x-and-parent-category-should-not-be-the-same=La categoria {0} e la categoria padre non possono essere la stessa.
 the-vocabulary-could-not-be-found=Vocabolario non trovato.
 there-are-no-vocabularies=Non ci sono dizionari.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=I vocabolari sono necessari per creare categorie. (Automatic Translation)
