--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ko.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Please enter a unique property key.
 please-enter-a-valid-property-key=Please enter a valid property key.
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=재산은 특정한 종류에 세부 사항 정보를 추가하는 방법 이다. 그들은 당신이 종류와 세부 사항 정보를 관련시키는 것을 허용하는 중요한 값 쌍으로 분리된다.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=새 저장 및 추가 (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same.
 the-vocabulary-could-not-be-found=종류는 발견될 수 없었다.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=범주를 만들기 위해서는 어휘가 필요합니다. (Automatic Translation)
