--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_nb.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Vennligst angi en unik innstillingsnøkkel.
 please-enter-a-valid-property-key=Vennligst angi en gyldig innstillingsnøkkel.
 please-enter-a-valid-property-value=Vennligst angi en gyldig innstillingsnøkkel.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Egenskaper er til for å gi mer informasjon om en spesifik kategori. De er delt opp i nøkkel-verdi-par.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Lagre og legge til en ny (Automatic Translation)
 select-category=Velg kategori
 the-asset-subtype-no-longer-exists=Ressursundertypen finnes ikke lenger.
 the-category-x-and-parent-category-should-not-be-the-same=Kategorien {0} og overordnet kategori bør ikke være like.
 the-vocabulary-could-not-be-found=Kategorien ble ikke funnet.
 there-are-no-vocabularies=Det finnes ingen ordlister.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Ordforråd er nødvendig for å opprette kategorier. (Automatic Translation)
