--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_pl.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Please enter a unique property key.
 please-enter-a-valid-property-key=Please enter a valid property key.
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Właściwości jest to sposób aby dodać bardziej szczegółowe informacje do określonej kategorii. Podzielone są na kluczowe pary wartości umożliwiające połączenie szczegółowej informacji z kategorią.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Zapisz i dodaj nowy (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=Kategoria {0} i kategoria nadrzędna nie mogą być takie same.
 the-vocabulary-could-not-be-found=Nie odnaleziono kategorii.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Słownictwo są potrzebne do tworzenia kategorii. (Automatic Translation)
