--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ro.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Please enter a unique property key.
 please-enter-a-valid-property-key=Please enter a valid property key.
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Proprietatile sunt o metoda de a adauga mai multe informatii detaliate a o categorie specifica. Ele sunt separate in valori cheie care iti permit sa asocieze informatii detaliate cu o categorie.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Salvarea și adăugarea unuia nou (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same.
 the-vocabulary-could-not-be-found=Categoria nu a putut fi gasita.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Vocabularele sunt necesare pentru a crea categorii. (Automatic Translation)
