--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ru.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Please enter a unique property key.
 please-enter-a-valid-property-key=Please enter a valid property key.
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Свойства позволяют добавить больше детальной информации выбранной категории. Они разделены на пары ключ-значение, что позволяет связывать детальную информацию с категорией.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Сохранить и добавить новый (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same.
 the-vocabulary-could-not-be-found=Категория не найдена.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Для создания категорий необходимы словари. (Automatic Translation)
