--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_sk.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Zadajte, prosím, jedinečný kľúč vlastno
 please-enter-a-valid-property-key=Zadajte, prosím, platný kľúč vlastnosti.
 please-enter-a-valid-property-value=Zadajte, prosím, platnú hodnotu vlastnosti.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Vlastnosti slúžia na pridávanie detailných informácií k špecifickej kategórii. Rozdelené sú na páry kľúč-hodnota čo umožňuje priraďovať podrobné informácie ku kategórii.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Uložiť a pridať nový (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=Kategória {0} a rodičovská kategória by nemali byť tie isté.
 the-vocabulary-could-not-be-found=Kategória sa nenašla.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Na vytvorenie kategórií sú potrebné slovníky. (Automatic Translation)
