--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_tr.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=Please enter a unique property key.
 please-enter-a-valid-property-key=Please enter a valid property key.
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Properties are a way to add more detailed information to a specific category. They are separated into key value pairs that allow you to associate detailed information with a category.
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=Yenisini Kaydet ve Ekle (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same.
 the-vocabulary-could-not-be-found=Kategori bulunamadı.
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Kelime kelime kategorileri oluşturmak için gereklidir. (Automatic Translation)
