--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_zh_TW.properties
@@ -18,10 +18,10 @@ please-enter-a-unique-property-key=請輸入一個唯一適當的鍵值。
 please-enter-a-valid-property-key=請輸入一個唯一適當的鍵值。
 please-enter-a-valid-property-value=Please enter a valid property value.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=屬性是加入更多詳細資訊到特定類別的一種方式。他們以允許您關連一個類別的詳細資訊鍵值以分辨。
-save-and-add-a-new-one=Save And Add A New One (Automatic Copy)
+save-and-add-a-new-one=儲存並新增新 (Automatic Translation)
 select-category=Select Category
 the-asset-subtype-no-longer-exists=The asset subtype no longer exists.
 the-category-x-and-parent-category-should-not-be-the-same=類別 {0} 與上層類別不應該一樣。
 the-vocabulary-could-not-be-found=找不到字彙。
 there-are-no-vocabularies=There are no vocabularies.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=創建類別需要詞彙。 (Automatic Translation)
