--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
@@ -105,7 +105,7 @@ new-content=Neuer Content
 new-experience=Neues Erlebnis
 new-segment=Neues Segment
 no-collection-selected-yet=Noch keine Sammlung ausgewählt
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=Keine Segmente
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Nicht instanziierbare Widgets können auf einer Seite nur einmal eingebettet werden.
 not-translated=Nicht übersetzt
