--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -105,7 +105,7 @@ new-content=Nuevo contenido
 new-experience=Nueva experiencia
 new-segment=Nuevo segmento
 no-collection-selected-yet=No hay ninguna colección seleccionada
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=Sin segmentos
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Un widget que no permita crear instancias solo se puede incorporar una vez en la misma página.
 not-translated=No traducido
