--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -105,7 +105,7 @@ new-content=Új tartalom
 new-experience=Új élmény
 new-segment=Új szegmens
 no-collection-selected-yet=Még nincs kiválasztva gyűjtemény
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=Nincs szegmens
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Nem példányosítható widgetek csak egyszer ágyazhatók be egy oldalra.
 not-translated=Nincs lefordítva
