--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -105,7 +105,7 @@ new-content=Nieuwe inhoud
 new-experience=Nieuwe ervaring
 new-segment=Nieuw segment
 no-collection-selected-yet=Nog geen collectie toegevoegd
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=Geen segmenten
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Niet-herbruikbare widgets kunnen slechts één keer worden ingesloten op dezelfde pagina.
 not-translated=Niet vertaald
