--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -105,7 +105,7 @@ new-content=Novo Conteúdo
 new-experience=Nova experiência
 new-segment=Novo segmento
 no-collection-selected-yet=Nenhum coleção selecionada até o momento
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=Sem segmentos
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Widgets não instanciável pode ser inserido apenas uma vez na mesma página.
 not-translated=Não traduzido
