--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -105,7 +105,7 @@ new-content=New Content
 new-experience=تجربه جدید
 new-segment=قطعه جدید
 no-collection-selected-yet=No Collection Selected Yet
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=بدون جزء
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Noninstaceable widgets can be embedded only once on the same page.
 not-translated=ترجمه نشده
