--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
@@ -105,7 +105,7 @@ new-content=Uusi Sisältö
 new-experience=Uusi Kokemus
 new-segment=Uusi Segmentti
 no-collection-selected-yet=Ei Vielä Valittua Kokoelmaa
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=Ei Segmenttejä
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Ei-instansioitavia pienoisohjelmia voi upottaa vain kerran samalle sivulle.
 not-translated=Ei käännetty
