--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -105,7 +105,7 @@ new-content=Nouveau contenu
 new-experience=Nouvelle expérience
 new-segment=Nouveau segment
 no-collection-selected-yet=Aucune collection sélectionnée pour le moment
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=Aucun segment
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Les widgets sans instance peuvent être intégrés une seule fois sur une même page.
 not-translated=Non traduit
