--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
@@ -105,7 +105,7 @@ new-content=Nytt innehåll
 new-experience=Ny upplevelse
 new-segment=Nytt segment
 no-collection-selected-yet=Ingen samling har valts än
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=Inga segment
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Icke-instansierbara widgetar kan bara bäddas in en gång på samma sida.
 not-translated=Inte översatt
