--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -105,7 +105,7 @@ new-content=新内容
 new-experience=新体验
 new-segment=新细分
 no-collection-selected-yet=尚未选择任何集合
-no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
+no-fields-are-available-for-x-editable=No fields are available for {0} editable. (Automatic Copy)
 no-segments=无细分
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=不可实例化微件在同一个页面上仅可以嵌入一次。
 not-translated=未翻译
